# gkrellm-sdnotify

./: .clang-format  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  gkrellm-sdnotify.cc
.github/workflows/: ci.yml  main.yml
debian/: changelog  control  copyright  watch
